--- a/index.html
+++ b/index.html
@@ -101,10 +101,19 @@
             --border-radius: 5px;
         } */
   </style>
-  <script src="https://cdn.jsdelivr.net/npm/@govtechsg/sgds-web-component@3.5.1-rc.0" async crossorigin="anonymous" integrity="sha384-qRauoz00hFCxC59ZTTCosxBYNglhjYXfkeI+MrIf1AW9e0ase0r/gmpzZIjr+MT7"></script>
-
-
-  <script type="module" src="src/OverflowMenu/index.ts"></script>
+  <script type="module">
+    let scriptTarget = document.getElementsByTagName("head")[0];
+    let moduleScript = document.createElement("script");
+    moduleScript.type = "module";
+    if (process.env.VITE_ENV === "production") {
+      // preview production build
+      moduleScript.src = "lib/index.js";
+    } else {
+      // development server
+      moduleScript.src = "src/index.ts";
+    }
+    scriptTarget.appendChild(moduleScript);
+  </script>
   <link href="./src/themes/day.css" rel="stylesheet" type="text/css" />
   <link href="./src/themes/night.css" rel="stylesheet" type="text/css" />
   <link href="./src/css/sgds.css" rel="stylesheet" type="text/css" />
@@ -2005,83 +2014,91 @@
     </div>
     <div class="container">
       <h2>Drawer</h2>
-      <sgds-drawer class="drawer-overview">
-        <h2 slot="title">Title</h2>
-        <p slot="description">Description</p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dictum est vitae erat molestie blandit.
-          Pellentesque at nunc at mi auctor imperdiet eu at leo. Integer aliquam, turpis vel ultricies ornare, sem massa
-          commodo velit, pretium dictum quam nibh et ex. Suspendisse eu dignissim libero. Donec aliquam, lacus eu
-          pellentesque interdum, arcu nisl blandit turpis, at tincidunt purus orci ut dolor. Morbi malesuada faucibus
-          lorem, ornare accumsan sapien lacinia vel. In enim justo, hendrerit eu mi vitae, viverra fringilla nunc. Proin
-          semper nunc a mollis faucibus. Nam at arcu non justo congue tincidunt. Donec vehicula felis risus, et lobortis
-          lacus fringilla eu. Proin faucibus, nisi non semper elementum, sapien nisi viverra urna, id tempus augue felis
-          ac nibh. Nullam pulvinar magna eros. Vestibulum at orci elit. Sed convallis fermentum gravida.
+    <sgds-drawer size="sm">
+    <h1 slot="title">Title</h1>
+    <p slot="description">Description</p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dictum est vitae erat molestie blandit.
+      Pellentesque at nunc at mi auctor imperdiet eu at leo. Integer aliquam, turpis vel ultricies ornare, sem massa
+      commodo velit, pretium dictum quam nibh et ex. Suspendisse eu dignissim libero. Donec aliquam, lacus eu
+      pellentesque interdum, arcu nisl blandit turpis, at tincidunt purus orci ut dolor. Morbi malesuada faucibus
+      lorem, ornare accumsan sapien lacinia vel. In enim justo, hendrerit eu mi vitae, viverra fringilla nunc. Proin
+      semper nunc a mollis faucibus. Nam at arcu non justo congue tincidunt. Donec vehicula felis risus, et lobortis
+      lacus fringilla eu. Proin faucibus, nisi non semper elementum, sapien nisi viverra urna, id tempus augue felis
+      ac nibh. Nullam pulvinar magna eros. Vestibulum at orci elit. Sed convallis fermentum gravida.
 
-          Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus
-          ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo
-          gravida, congue sapien eu, rhoncus ante. Quisque velit est, sodales vitae turpis vitae, hendrerit facilisis
-          nulla. Suspendisse potenti. Nulla hendrerit enim sed leo rutrum auctor. Praesent volutpat rutrum purus in
-          volutpat. Vivamus at facilisis ipsum, eu consequat ex. Integer ante ligula, mollis at diam in, tincidunt
-          tincidunt orci. Mauris eu rutrum purus, eget consectetur massa. Pellentesque sed euismod dolor, vel ornare
-          orci. Proin tincidunt gravida lorem. Duis vehicula, turpis quis placerat pharetra, lacus tortor fermentum
-          tortor, a tincidunt mi arcu quis risus. Duis id ultrices urna, non placerat ex.
+      Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus
+      ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo
+      gravida, congue sapien eu, rhoncus ante. Quisque velit est, sodales vitae turpis vitae, hendrerit facilisis
+      nulla. Suspendisse potenti. Nulla hendrerit enim sed leo rutrum auctor. Praesent volutpat rutrum purus in
+      volutpat. Vivamus at facilisis ipsum, eu consequat ex. Integer ante ligula, mollis at diam in, tincidunt
+      tincidunt orci. Mauris eu rutrum purus, eget consectetur massa. Pellentesque sed euismod dolor, vel ornare
+      orci. Proin tincidunt gravida lorem. Duis vehicula, turpis quis placerat pharetra, lacus tortor fermentum
+      tortor, a tincidunt mi arcu quis risus. Duis id ultrices urna, non placerat ex.
 
-          Sed efficitur rhoncus condimentum. Aliquam eu convallis massa, ac suscipit dolor. Morbi bibendum lacus a justo
-          consectetur gravida. Nullam porttitor ullamcorper eros, at hendrerit est semper venenatis. Donec non dolor
-          metus. Aenean sit amet massa arcu. Quisque rhoncus orci pretium, venenatis orci quis, tincidunt ex. Duis
-          efficitur lacus dolor, a interdum sapien imperdiet nec. Sed lobortis erat justo. Nam nec metus eget est
-          blandit consequat non at sapien. Curabitur arcu eros, ultricies eu magna non, vulputate imperdiet erat. Duis
-          nec sapien quam. In sapien elit, bibendum nec porttitor ac, vulputate pulvinar lacus. Maecenas venenatis lorem
-          eget consequat molestie. Nulla hendrerit interdum sem, et efficitur ligula porttitor eget.
+      Sed efficitur rhoncus condimentum. Aliquam eu convallis massa, ac suscipit dolor. Morbi bibendum lacus a justo
+      consectetur gravida. Nullam porttitor ullamcorper eros, at hendrerit est semper venenatis. Donec non dolor
+      metus. Aenean sit amet massa arcu. Quisque rhoncus orci pretium, venenatis orci quis, tincidunt ex. Duis
+      efficitur lacus dolor, a interdum sapien imperdiet nec. Sed lobortis erat justo. Nam nec metus eget est
+      blandit consequat non at sapien. Curabitur arcu eros, ultricies eu magna non, vulputate imperdiet erat. Duis
+      nec sapien quam. In sapien elit, bibendum nec porttitor ac, vulputate pulvinar lacus. Maecenas venenatis lorem
+      eget consequat molestie. Nulla hendrerit interdum sem, et efficitur ligula porttitor eget.
 
-          Vivamus nibh risus, sodales condimentum orci sit amet, aliquam bibendum nunc. Etiam a elit et mi interdum
-          faucibus vitae sed risus. Aenean eu posuere mi. Aenean lectus turpis, mollis eget ornare sit amet, placerat ac
-          orci. Suspendisse tincidunt accumsan dolor, vitae pellentesque ipsum hendrerit quis. Duis luctus, ipsum a
-          tempor rutrum, neque urna tincidunt dolor, ut placerat neque augue at ante. Curabitur id bibendum sem.
-          Pellentesque vel tellus congue, condimentum purus quis, pulvinar massa.
+      Vivamus nibh risus, sodales condimentum orci sit amet, aliquam bibendum nunc. Etiam a elit et mi interdum
+      faucibus vitae sed risus. Aenean eu posuere mi. Aenean lectus turpis, mollis eget ornare sit amet, placerat ac
+      orci. Suspendisse tincidunt accumsan dolor, vitae pellentesque ipsum hendrerit quis. Duis luctus, ipsum a
+      tempor rutrum, neque urna tincidunt dolor, ut placerat neque augue at ante. Curabitur id bibendum sem.
+      Pellentesque vel tellus congue, condimentum purus quis, pulvinar massa.
 
-          Suspendisse ac vulputate urna. Curabitur elementum consectetur blandit. Nulla tristique nec elit non placerat.
-          Vestibulum porttitor mi nec quam dignissim suscipit. Aenean eu dui a felis interdum eleifend ut non nibh.
-          Proin at molestie ante. Etiam vel ipsum vitae nunc porta fermentum.Lorem ipsum dolor sit amet, consectetur
-          adipiscing elit. Etiam dictum est vitae erat molestie blandit. Pellentesque at nunc at mi auctor imperdiet eu
-          at leo. Integer aliquam, turpis vel ultricies ornare, sem massa commodo velit, pretium dictum quam nibh et ex.
-          Suspendisse eu dignissim libero. Donec aliquam, lacus eu pellentesque interdum, arcu nisl blandit turpis, at
-          tincidunt purus orci ut dolor. Morbi malesuada faucibus lorem, ornare accumsan sapien lacinia vel. In enim
-          justo, hendrerit eu mi vitae, viverra fringilla nunc. Proin semper nunc a mollis faucibus. Nam at arcu non
-          justo congue tincidunt. Donec vehicula felis risus, et lobortis lacus fringilla eu. Proin faucibus, nisi non
-          semper elementum, sapien nisi viverra urna, id tempus augue felis ac nibh. Nullam pulvinar magna eros.
-          Vestibulum at orci elit. Sed convallis fermentum gravida.
+      Suspendisse ac vulputate urna. Curabitur elementum consectetur blandit. Nulla tristique nec elit non placerat.
+      Vestibulum porttitor mi nec quam dignissim suscipit. Aenean eu dui a felis interdum eleifend ut non nibh.
+      Proin at molestie ante. Etiam vel ipsum vitae nunc porta fermentum.Lorem ipsum dolor sit amet, consectetur
+      adipiscing elit. Etiam dictum est vitae erat molestie blandit. Pellentesque at nunc at mi auctor imperdiet eu
+      at leo. Integer aliquam, turpis vel ultricies ornare, sem massa commodo velit, pretium dictum quam nibh et ex.
+      Suspendisse eu dignissim libero. Donec aliquam, lacus eu pellentesque interdum, arcu nisl blandit turpis, at
+      tincidunt purus orci ut dolor. Morbi malesuada faucibus lorem, ornare accumsan sapien lacinia vel. In enim
+      justo, hendrerit eu mi vitae, viverra fringilla nunc. Proin semper nunc a mollis faucibus. Nam at arcu non
+      justo congue tincidunt. Donec vehicula felis risus, et lobortis lacus fringilla eu. Proin faucibus, nisi non
+      semper elementum, sapien nisi viverra urna, id tempus augue felis ac nibh. Nullam pulvinar magna eros.
+      Vestibulum at orci elit. Sed convallis fermentum gravida.
 
-          Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus
-          ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo
-          gravida, congue sapien eu, rhoncus ante. Quisque velit est, sodales vitae turpis vitae, hendrerit facilisis
-          nulla. Suspendisse potenti. Nulla hendrerit enim sed leo rutrum auctor. Praesent volutpat rutrum purus in
-          volutpat. Vivamus at facilisis ipsum, eu consequat ex. Integer ante ligula, mollis at diam in, tincidunt
-          tincidunt orci. Mauris eu rutrum purus, eget consectetur massa. Pellentesque sed euismod dolor, vel ornare
-          orci. Proin tincidunt gravida lorem. Duis vehicula, turpis quis placerat pharetra, lacus tortor fermentum
-          tortor, a tincidunt mi arcu quis risus. Duis id ultrices urna, non placerat ex.
+      Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus
+      ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo
+      gravida, congue sapien eu, rhoncus ante. Quisque velit est, sodales vitae turpis vitae, hendrerit facilisis
+      nulla. Suspendisse potenti. Nulla hendrerit enim sed leo rutrum auctor. Praesent volutpat rutrum purus in
+      volutpat. Vivamus at facilisis ipsum, eu consequat ex. Integer ante ligula, mollis at diam in, tincidunt
+      tincidunt orci. Mauris eu rutrum purus, eget consectetur massa. Pellentesque sed euismod dolor, vel ornare
+      orci. Proin tincidunt gravida lorem. Duis vehicula, turpis quis placerat pharetra, lacus tortor fermentum
+      tortor, a tincidunt mi arcu quis risus. Duis id ultrices urna, non placerat ex.
 
-          Sed efficitur rhoncus condimentum. Aliquam eu convallis massa, ac suscipit dolor. Morbi bibendum lacus a justo
-          consectetur gravida. Nullam porttitor ullamcorper eros, at hendrerit est semper venenatis. Donec non dolor
-          metus. Aenean sit amet massa arcu. Quisque rhoncus orci pretium, venenatis orci quis, tincidunt ex. Duis
-          efficitur lacus dolor, a interdum sapien imperdiet nec. Sed lobortis erat justo. Nam nec metus eget est
-          blandit consequat non at sapien. Curabitur arcu eros, ultricies eu magna non, vulputate imperdiet erat. Duis
-          nec sapien quam. In sapien elit, bibendum nec porttitor ac, vulputate pulvinar lacus. Maecenas venenatis lorem
-          eget consequat molestie. Nulla hendrerit interdum sem, et efficitur ligula porttitor eget.
+      Sed efficitur rhoncus condimentum. Aliquam eu convallis massa, ac suscipit dolor. Morbi bibendum lacus a justo
+      consectetur gravida. Nullam porttitor ullamcorper eros, at hendrerit est semper venenatis. Donec non dolor
+      metus. Aenean sit amet massa arcu. Quisque rhoncus orci pretium, venenatis orci quis, tincidunt ex. Duis
+      efficitur lacus dolor, a interdum sapien imperdiet nec. Sed lobortis erat justo. Nam nec metus eget est
+      blandit consequat non at sapien. Curabitur arcu eros, ultricies eu magna non, vulputate imperdiet erat. Duis
+      nec sapien quam. In sapien elit, bibendum nec porttitor ac, vulputate pulvinar lacus. Maecenas venenatis lorem
+      eget consequat molestie. Nulla hendrerit interdum sem, et efficitur ligula porttitor eget.
 
-          Vivamus nibh risus, sodales condimentum orci sit amet, aliquam bibendum nunc. Etiam a elit et mi interdum
-          faucibus vitae sed risus. Aenean eu posuere mi. Aenean lectus turpis, mollis eget ornare sit amet, placerat ac
-          orci. Suspendisse tincidunt accumsan dolor, vitae pellentesque ipsum hendrerit quis. Duis luctus, ipsum a
-          tempor rutrum, neque urna tincidunt dolor, ut placerat neque augue at ante. Curabitur id bibendum sem.
-          Pellentesque vel tellus congue, condimentum purus quis, pulvinar massa.
+      Vivamus nibh risus, sodales condimentum orci sit amet, aliquam bibendum nunc. Etiam a elit et mi interdum
+      faucibus vitae sed risus. Aenean eu posuere mi. Aenean lectus turpis, mollis eget ornare sit amet, placerat ac
+      orci. Suspendisse tincidunt accumsan dolor, vitae pellentesque ipsum hendrerit quis. Duis luctus, ipsum a
+      tempor rutrum, neque urna tincidunt dolor, ut placerat neque augue at ante. Curabitur id bibendum sem.
+      Pellentesque vel tellus congue, condimentum purus quis, pulvinar massa.
 
-          Suspendisse ac vulputate urna. Curabitur elementum consectetur blandit. Nulla tristique nec elit non placerat.
-          Vestibulum porttitor mi nec quam dignissim suscipit. Aenean eu dui a felis interdum eleifend ut non nibh.
-          Proin at molestie ante. Etiam vel ipsum vitae nunc porta fermentum.
-      </sgds-drawer>
+      Suspendisse ac vulputate urna. Curabitur elementum consectetur blandit. Nulla tristique nec elit non placerat.
+      Vestibulum porttitor mi nec quam dignissim suscipit. Aenean eu dui a felis interdum eleifend ut non nibh.
+      Proin at molestie ante. Etiam vel ipsum vitae nunc porta fermentum.
+    <div class="button-group" slot="footer">
+      <sgds-button>Button 1</sgds-button>
+      <sgds-button>Button 2</sgds-button>
+    </div>
+  </sgds-drawer>
       <sgds-button>Open Drawer</sgds-button>
     </div>
-
+<script>
+  const drawer = document.querySelector('sgds-drawer');
+  const openButton = drawer.nextElementSibling;
+  openButton.addEventListener('click', () => drawer.show());
+</script>
     <div class="">
       <h2>Tooltip</h2>
       Hover me
