chore(SystemBanner): wip content layout

--- a/playground/AlertBanner.html
+++ b/playground/AlertBanner.html
@@ -10,5 +10,17 @@
         <div>message here</div>
             <a href="#" slot="action">Action</a>
     </sgds-alert-banner-item>
+    <sgds-alert-banner-item>
+        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
+        <div slot="title">Title</div>
+        <div>message here</div>
+            <a href="#" slot="action">Action</a>
+    </sgds-alert-banner-item>
+    <sgds-alert-banner-item>
+        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
+        <div slot="title">Title</div>
+        <div>message here</div>
+            <a href="#" slot="action">Action</a>
+    </sgds-alert-banner-item>
 </sgds-alert-banner>
 
