--- a/playground/IconButton.html
+++ b/playground/IconButton.html
@@ -200,3 +200,12 @@
     <sgds-table-cell class="fixed-light-cell"><sgds-icon-button name="placeholder" loading tone="fixed-light" variant="outline"></sgds-icon-button></sgds-table-cell>
   </sgds-table-row>
 </sgds-table>
+
+<sgds-icon-button name="placeholder" loading></sgds-icon-button>
+
+<script>
+  const button = document.getElementById("test-loading-disabled");
+  button.addEventListener("click", () => {
+    alert("HELLO")
+  })
+  </script> 
