--- a/playground/Spinner.html
+++ b/playground/Spinner.html
@@ -10,6 +10,12 @@
 <sgds-spinner size="lg" label="Loading..."></sgds-spinner>
 <sgds-spinner size="xl" label="Loading..."></sgds-spinner>
 
+<sgds-spinner size="xs" label="Loading..." orientation="horizontal"></sgds-spinner>
+<sgds-spinner size="sm" label="Loading..." orientation="horizontal"></sgds-spinner>
+<sgds-spinner size="md" label="Loading..." orientation="horizontal"></sgds-spinner>
+<sgds-spinner size="lg" label="Loading..." orientation="horizontal"></sgds-spinner>
+<sgds-spinner size="xl" label="Loading..." orientation="horizontal"></sgds-spinner>
+
 <br/>
 
 <sgds-spinner size="xs" tone="primary"></sgds-spinner>
@@ -22,4 +28,7 @@
 
 <sgds-spinner size="xl" tone="fixed-dark"></sgds-spinner>
 
+<h2>Deprecated since 3.5.6</h2>
+<sgds-spinner variant="primary"></sgds-spinner>
+<sgds-spinner variant="neutral"></sgds-spinner>
 
