fix(Drawer): revert to percentages

--- a/playground/Drawer.html
+++ b/playground/Drawer.html
@@ -22,7 +22,7 @@
 
 <div class="container">
   <h2>Drawer</h2>
-  <sgds-drawer size="sm">
+  <sgds-drawer size="md" placement="end">
     <h1 slot="title">Title</h1>
     <p slot="description">Description</p>
     <sgds-accordion density="compact">
