chore(systembanner): wip

--- a/playground/AlertBanner.html
+++ b/playground/AlertBanner.html
@@ -6,19 +6,19 @@
 <sgds-alert-banner dismissible show>
     <sgds-alert-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div slot="title">Title</div>
+        <div slot="title">Title 1</div>
         <div>message here</div>
             <a href="#" slot="action">Action</a>
     </sgds-alert-banner-item>
     <sgds-alert-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div slot="title">Title</div>
+        <div slot="title">Title 2</div>
         <div>message here</div>
             <a href="#" slot="action">Action</a>
     </sgds-alert-banner-item>
     <sgds-alert-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div slot="title">Title</div>
+        <div slot="title">Title 3</div>
         <div>message here</div>
             <a href="#" slot="action">Action</a>
     </sgds-alert-banner-item>
