fix(modal): close button misalignment in full screen mode

--- a/playground/Modal.html
+++ b/playground/Modal.html
@@ -3,7 +3,8 @@
 <link href="../src/themes/night.css" rel="stylesheet" type="text/css" />
 <link href="../src/css/sgds.css" rel="stylesheet" type="text/css" />
 
-<sgds-modal open>
+<sgds-modal open size="md">
+  <h2 slot="title">Modal Titlelsdkfjsdlfkj sldkfjs ldkfjdl skj dsfiljdsljfhwoe iujdslkf sldfijksdlikfjsodlzifkjm</h2>
   <sgds-select id="select-example" label="Select label" hinttext="Select an option" placeholder="Select an option"></sgds-select>
 <div class="d-flex-row">
       <sgds-tooltip content="This is a tooltip" placement="top">
