--- a/playground/Combobox.html
+++ b/playground/Combobox.html
@@ -27,6 +27,10 @@
     <sgds-combo-box-option value="option1">Option 1</sgds-combo-box-option>
     <sgds-combo-box-option value="option2">Option 2</sgds-combo-box-option>
   </sgds-combo-box>
+  <sgds-combo-box value="option1" required hasFeedback multiselect >
+    <sgds-combo-box-option value="option1">Option 1</sgds-combo-box-option>
+    <sgds-combo-box-option value="option2">Option 2</sgds-combo-box-option>
+  </sgds-combo-box>
   <button type="submit">Submit</button>
   </form>
 
