--- a/playground/AlertBanner.html
+++ b/playground/AlertBanner.html
@@ -22,5 +22,24 @@
         <div>message here</div>
             <a href="#" slot="action">Action</a>
     </sgds-alert-banner-item>
+
+    <sgds-alert-banner-item slot="duplicate">
+        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
+        <div slot="title">Title 1 d</div>
+        <div>message here</div>
+            <a href="#" slot="action">Action</a>
+    </sgds-alert-banner-item>
+    <sgds-alert-banner-item slot="duplicate"> 
+        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
+        <div slot="title">Title 2 d</div>
+        <div>message here</div>
+            <a href="#" slot="action">Action</a>
+    </sgds-alert-banner-item>
+    <sgds-alert-banner-item slot="duplicate">
+        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
+        <div slot="title">Title 3d</div>
+        <div>message here</div>
+            <a href="#" slot="action">Action</a>
+    </sgds-alert-banner-item>
 </sgds-alert-banner>
 
