fix(combobox): handle no options when 0 options passed in, reset empty menu when menu is close
handle dynamic value change in select displayValue

--- a/playground/Combobox.html
+++ b/playground/Combobox.html
@@ -31,8 +31,16 @@
     <sgds-combo-box-option value="option1">Option 1</sgds-combo-box-option>
     <sgds-combo-box-option value="option2">Option 2</sgds-combo-box-option>
   </sgds-combo-box>
+
+  <sgds-combo-box
+      label="Combobox using slot"
+      hinttext="Select an option"
+      placeholder="Select an option"
+    ></sgds-combo-box>
   <button type="submit">Submit</button>
   </form>
 
   </body>
 </html>
+
+
