--- a/playground/Select.html
+++ b/playground/Select.html
@@ -36,23 +36,12 @@
     value="1"
     required
     hasFeedback
-  ><sgds-select-option disabled value="1">Option 1</sgds-select-option>
-  <sgds-select-option disabled value="2">Option 2</sgds-select-option>
-  <sgds-select-option value="3">Option 3</sgds-select-option>
-</sgds-select>
-  <sgds-select
-    label="Select label"
-    hinttext="Select an option"
-    placeholder="Select an option"
-    required
-    hasFeedback
-  ><sgds-select-option disabled value="1">Option 1</sgds-select-option>
-  <sgds-select-option disabled value="2">Option 2</sgds-select-option>
-  <sgds-select-option value="3">Option 3</sgds-select-option>
-</sgds-select>
-<button type="submit">submit</button>
-<button type="reset">reset</button>
-</form>
+  >  <sgds-select-option  value="1">Option 1</sgds-select-option>
+  <sgds-select-option  value="2">Option 2</sgds-select-option>
+  <sgds-select-option value="3">Option 3</sgds-select-option></sgds-select>
+
+ 
+
   <!-- <sgds-select
     label="Using slots with some disabled options"
     hinttext="Select an option"
