feat(system-banner): implement animation , pagination looping, variant colors

--- a/playground/AlertBanner.html
+++ b/playground/AlertBanner.html
@@ -7,6 +7,27 @@
     <sgds-alert-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
         <div slot="title">Title 1</div>
+        <div>Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida, congue sapien eu, rhoncus ante. Quisque velit est, sodales vitae turpis vitae, hendrerit facilisis nulla. Suspendisse potenti. Nulla hendrerit enim sed leo rutrum auctor. Praesent volutpat rutrum purus in Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus</div>
+            <a href="#" slot="action">Action</a>
+    </sgds-alert-banner-item>
+    <sgds-alert-banner-item>
+        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
+        <div slot="title">Title 2</div>
+        <div>message here</div>
+            <a href="#" slot="action">Action</a>
+    </sgds-alert-banner-item>
+    <sgds-alert-banner-item>
+        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
+        <div slot="title">Title 3</div>
+        <div>message here</div>
+            <a href="#" slot="action">Action</a>
+    </sgds-alert-banner-item>
+</sgds-alert-banner>
+
+<sgds-alert-banner dismissible show variant="neutral">
+    <sgds-alert-banner-item>
+        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
+        <div slot="title">Title 1</div>
         <div>message here</div>
             <a href="#" slot="action">Action</a>
     </sgds-alert-banner-item>
@@ -22,22 +43,45 @@
         <div>message here</div>
             <a href="#" slot="action">Action</a>
     </sgds-alert-banner-item>
+</sgds-alert-banner>
 
-    <sgds-alert-banner-item slot="duplicate">
+<sgds-alert-banner dismissible show variant="danger">
+    <sgds-alert-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div slot="title">Title 1 d</div>
+        <div slot="title">Title 1</div>
         <div>message here</div>
             <a href="#" slot="action">Action</a>
     </sgds-alert-banner-item>
-    <sgds-alert-banner-item slot="duplicate"> 
+    <sgds-alert-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div slot="title">Title 2 d</div>
+        <div slot="title">Title 2</div>
         <div>message here</div>
             <a href="#" slot="action">Action</a>
     </sgds-alert-banner-item>
-    <sgds-alert-banner-item slot="duplicate">
+    <sgds-alert-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div slot="title">Title 3d</div>
+        <div slot="title">Title 3</div>
+        <div>message here</div>
+            <a href="#" slot="action">Action</a>
+    </sgds-alert-banner-item>
+</sgds-alert-banner>
+
+<sgds-alert-banner dismissible show variant="warning">
+    <sgds-alert-banner-item>
+        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
+        <div slot="title">Title 1</div>
+        <div>message here</div>
+            <a href="#" slot="action">Action</a>
+    </sgds-alert-banner-item>
+    <sgds-alert-banner-item>
+        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
+        <div slot="title">Title 2</div>
+        <div>message here</div>
+            <a href="#" slot="action">Action</a>
+    </sgds-alert-banner-item>
+    <sgds-alert-banner-item>
+        <sgds-icon slot="icon" name="placeholder"></sgds-icon>
+        <div slot="title">Title 3</div>
         <div>message here</div>
             <a href="#" slot="action">Action</a>
     </sgds-alert-banner-item>
