--- a/playground/SystemBanner.html
+++ b/playground/SystemBanner.html
@@ -3,87 +3,87 @@
 <link href="../src/themes/night.css" rel="stylesheet" type="text/css" />
 <link href="../src/css/sgds.css" rel="stylesheet" type="text/css" />
 
-<sgds-alert-banner dismissible show>
-    <sgds-alert-banner-item>
+<sgds-system-banner dismissible show>
+    <sgds-system-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
         <div slot="title">Title 1</div>
-        <div>Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida, congue sapien eu, rhoncus ante. Quisque velit est, sodales vitae turpis vitae, hendrerit facilisis nulla. Suspendisse potenti. Nulla hendrerit enim sed leo rutrum auctor. Praesent volutpat rutrum purus in Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus</div>
+        <div>Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida, congue sapien eu, rhoncus Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida, congue sapien eu, rhoncu</div>
             <a href="#" slot="action">Action</a>
-    </sgds-alert-banner-item>
-    <sgds-alert-banner-item>
+    </sgds-system-banner-item>
+    <sgds-system-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div slot="title">Title 2</div>
-        <div>message here</div>
+        <div slot="title">Title 1</div>
+        <div>Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida, congue sapien eu, rhoncus </div>
             <a href="#" slot="action">Action</a>
-    </sgds-alert-banner-item>
-    <sgds-alert-banner-item>
+    </sgds-system-banner-item>
+    <sgds-system-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div slot="title">Title 3</div>
-        <div>message here</div>
+        <div slot="title">Title 1</div>
+        <div>Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida, congue sapien eu, rhoncus </div>
             <a href="#" slot="action">Action</a>
-    </sgds-alert-banner-item>
-</sgds-alert-banner>
+    </sgds-system-banner-item>
+</sgds-system-banner>
 
-<sgds-alert-banner dismissible show variant="neutral">
-    <sgds-alert-banner-item>
+<sgds-system-banner dismissible show variant="neutral">
+    <sgds-system-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
         <div slot="title">Title 1</div>
         <div>message here</div>
             <a href="#" slot="action">Action</a>
-    </sgds-alert-banner-item>
-    <sgds-alert-banner-item>
+    </sgds-system-banner-item>
+    <sgds-system-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
         <div slot="title">Title 2</div>
         <div>message here</div>
             <a href="#" slot="action">Action</a>
-    </sgds-alert-banner-item>
-    <sgds-alert-banner-item>
+    </sgds-system-banner-item>
+    <sgds-system-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
         <div slot="title">Title 3</div>
         <div>message here</div>
             <a href="#" slot="action">Action</a>
-    </sgds-alert-banner-item>
-</sgds-alert-banner>
+    </sgds-system-banner-item>
+</sgds-system-banner>
 
-<sgds-alert-banner dismissible show variant="danger">
-    <sgds-alert-banner-item>
+<sgds-system-banner dismissible show variant="danger">
+    <sgds-system-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
         <div slot="title">Title 1</div>
         <div>message here</div>
             <a href="#" slot="action">Action</a>
-    </sgds-alert-banner-item>
-    <sgds-alert-banner-item>
+    </sgds-system-banner-item>
+    <sgds-system-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
         <div slot="title">Title 2</div>
         <div>message here</div>
             <a href="#" slot="action">Action</a>
-    </sgds-alert-banner-item>
-    <sgds-alert-banner-item>
+    </sgds-system-banner-item>
+    <sgds-system-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
         <div slot="title">Title 3</div>
         <div>message here</div>
             <a href="#" slot="action">Action</a>
-    </sgds-alert-banner-item>
-</sgds-alert-banner>
+    </sgds-system-banner-item>
+</sgds-system-banner>
 
-<sgds-alert-banner dismissible show variant="warning">
-    <sgds-alert-banner-item>
+<sgds-system-banner dismissible show variant="warning">
+    <sgds-system-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
         <div slot="title">Title 1</div>
         <div>message here</div>
             <a href="#" slot="action">Action</a>
-    </sgds-alert-banner-item>
-    <sgds-alert-banner-item>
+    </sgds-system-banner-item>
+    <sgds-system-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
         <div slot="title">Title 2</div>
         <div>message here</div>
             <a href="#" slot="action">Action</a>
-    </sgds-alert-banner-item>
-    <sgds-alert-banner-item>
+    </sgds-system-banner-item>
+    <sgds-system-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
         <div slot="title">Title 3</div>
         <div>message here</div>
             <a href="#" slot="action">Action</a>
-    </sgds-alert-banner-item>
-</sgds-alert-banner>
+    </sgds-system-banner-item>
+</sgds-system-banner>
 
