--- a/playground/SystemBanner.html
+++ b/playground/SystemBanner.html
@@ -3,13 +3,26 @@
 <link href="../src/themes/night.css" rel="stylesheet" type="text/css" />
 <link href="../src/css/sgds.css" rel="stylesheet" type="text/css" />
 
+<style>
+    div.another-container {
+        margin-top: 136px;
+        transition: margin-top 1s ease;
+    }
+    div.another-container.no-banner {
+        margin-top: 0px;
+    }
+    sgds-system-banner {
+        position: absolute;
+        inset: 0
+    }
+</style>
 <sgds-system-banner dismissible show>
-    <sgds-system-banner-item>
+    <!-- <sgds-system-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
         <div slot="title">Title 1</div>
         <div>Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida, congue sapien eu, rhoncus Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida, congue sapien eu, rhoncu</div>
             <a href="#" slot="action">Action</a>
-    </sgds-system-banner-item>
+    </sgds-system-banner-item> -->
     <sgds-system-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
         <div slot="title">Title 1</div>
@@ -18,13 +31,22 @@
     </sgds-system-banner-item>
     <sgds-system-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
-        <div slot="title">Title 1</div>
+        <div slot="title">Title 2</div>
         <div>Etiam suscipit nisi eget porta cursus. Ut sit amet felis aliquet, pellentesque mi at, vulputate nunc. Vivamus ac facilisis tellus. Maecenas ac libero scelerisque tellus maximus accumsan a vehicula arcu. Aenean quis leo gravida, congue sapien eu, rhoncus </div>
             <a href="#" slot="action">Action</a>
     </sgds-system-banner-item>
 </sgds-system-banner>
 
-<sgds-system-banner dismissible show variant="neutral">
+<div class="another-container">another container</div>
+<script>
+    const banner = document.querySelector('sgds-system-banner');
+    banner.addEventListener("sgds-hide", () => {
+        console.log("Banner is hidden");
+        const anotherContainer = document.querySelector('.another-container');
+        anotherContainer.classList.add('no-banner');
+    })
+</script>
+<!-- <sgds-system-banner dismissible show variant="neutral">
     <sgds-system-banner-item>
         <sgds-icon slot="icon" name="placeholder"></sgds-icon>
         <div slot="title">Title 1</div>
@@ -86,4 +108,4 @@
             <a href="#" slot="action">Action</a>
     </sgds-system-banner-item>
 </sgds-system-banner>
-
+  -->
